--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -40,6 +40,6 @@ jobs:
       - uses: action-pack/gitlab-sync@master
         with:
           username: ${{ secrets.GITLAB_USERNAME }}
-          token: ${{ secrets.GITLAB_TOKEN }}
+          token: ${{ secrets.GITLAB_SYNC_PSYEDOUT }}
           url: https://gitlab.com/${{ github.repository }}.git
           
